# paystack-python-mcp

./: .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  mcp_server.py  paystack.py  pyproject.toml
app/: paystack_client.py  server.py  tools.py
tests/: test_tools.py
